rgw: Fix rados object leaks when a part is uploaded multiple times

Related to https://tracker.ceph.com/issues/57942.

When a part has been uploaded multiple times, the rados objects of
the fist uploads become orphans (not referenced in target object
manifest) and are never removed from the pool.
These leaked objects generate increase of bucket space usage that
can't be explained by user.

Proposed solution is to remove these objects from pool and from
index when a part is uploaded again.

Fixes: https://tracker.ceph.com/issues/57942
Signed-off-by: Peter Goron <peter.goron@gmail.com>